@@ -29,6 +29,7 @@
 #include <gsl/gsl_multifit.h>
 #include <gsl/gsl_fit.h>
 #include "core/siril.h"
+#include "algos/sorting.h"
 #include "core/optimize_utils.h"
 #include "core/proto.h"
 #include "core/siril_log.h"
@@ -104,22 +105,106 @@ cleanup_and_return:
 	return retval;
 }
 
-// Wrapper function for robust linear fit (common use case)
-int robust_linear_fit(double *xdata, double *ydata, int n, double *a, double *b, double *sigma, gboolean *mask) {
-	// Degree 1 for linear fit
-	double coeffs[2]; // Two coefficients for a linear fit: a and b
-	double uncertainties[2]; // Two uncertainties for the coefficients
+/**
+ * Siegel's Repeated Median Regression for linear fit
+ * Extremely robust method that can handle up to 50% contamination
+ */
+int repeated_median_fit(double *xdata, double *ydata, int n, double *a,
+		double *b, double *sigma, gboolean *mask) {
 
-	// Call robust_polynomial_fit with degree 1
-	int retval = robust_polynomial_fit(xdata, ydata, n, 1, coeffs, uncertainties, mask, sigma);
-
-	// Set the output parameters for linear fit
-	if (retval == GSL_SUCCESS) {
-		*a = coeffs[0];
-		*b = coeffs[1];
+	if (n < 2) {
+		return -1; // Need at least 2 points for a line
 	}
 
-	return retval;
+	// Arrays to hold all possible pairwise slopes
+	double *all_slopes = g_malloc(n * (n - 1) / 2 * sizeof(double));
+	double *point_medians = g_malloc(n * sizeof(double)); // For each point, median of slopes with all other points
+
+	// For each point, calculate slopes with all other points
+	for (int i = 0; i < n; i++) {
+		int slope_count = 0;
+		double *slopes_for_point = g_malloc((n - 1) * sizeof(double));
+
+		for (int j = 0; j < n; j++) {
+			if (i != j) {
+				// Avoid division by zero
+				if (xdata[i] != xdata[j]) {
+					slopes_for_point[slope_count] = (ydata[j] - ydata[i])
+							/ (xdata[j] - xdata[i]);
+					slope_count++;
+				}
+			}
+		}
+
+		// Calculate median of slopes for this point
+		point_medians[i] = quickmedian_double(slopes_for_point, slope_count);
+
+		g_free(slopes_for_point);
+	}
+
+	// The final slope is the median of all the point medians
+	double slope = quickmedian_double(point_medians, n);
+
+	// Calculate intercepts for each point
+	double *intercepts = g_malloc(n * sizeof(double));
+	for (int i = 0; i < n; i++) {
+		intercepts[i] = ydata[i] - slope * xdata[i];
+	}
+
+	// The final intercept is the median of all intercepts
+	double intercept = quickmedian_double(intercepts, n);
+
+	// Set output parameters
+	*b = slope;
+	*a = intercept;
+
+	// Calculate residuals and identify outliers
+	double residual_sum = 0.0;
+	int inlier_count = 0;
+
+	double *absolute_residuals = g_malloc(n * sizeof(double));
+	for (int i = 0; i < n; i++) {
+		double predicted = intercept + slope * xdata[i];
+		double residual = ydata[i] - predicted;
+		absolute_residuals[i] = fabs(residual);
+		residual_sum += residual * residual;
+	}
+
+	// Calculate MAD (Median Absolute Deviation) for residuals
+	double mad = quickmedian_double(absolute_residuals, n);
+
+	// Normalize by 1.4826 to make MAD equivalent to standard deviation for normal distribution
+	mad *= MAD_NORM;
+
+	// Mark points as inliers/outliers using MAD
+	for (int i = 0; i < n; i++) {
+		if (mask != NULL) {
+			// Points with absolute residual > 3 * MAD are considered outliers
+			// (TODO: This threshold can be adjusted (common values: 2.5-3.5))
+			mask[i] = (absolute_residuals[i] <= 3.0 * mad);
+		}
+
+		if (absolute_residuals[i] <= 3.0 * mad) {
+			inlier_count++;
+		}
+	}
+
+	// Calculate sigma (standard deviation of residuals)
+	if (sigma != NULL) {
+		if (inlier_count > 2) {
+			*sigma = sqrt(residual_sum / inlier_count);
+		} else {
+			*sigma = sqrt(residual_sum / n);
+		}
+	}
+
+	// Cleanup
+	g_free(all_slopes);
+	g_free(point_medians);
+	g_free(intercepts);
+	g_free(absolute_residuals);
+
+	return 0;
 }
 
 // Function to evaluate a 1D polynomial at a given point
