@@ -4,6 +4,7 @@ XX/XX/25
 **Fixes:**
 * Fixes option -weight= for stack command and add filtering criteria in HISTORY key of stacked image (#1545)
 * Fixes crash when refreshing the scripts list (#1548)
+* Immplement a better linear regression algorithm for SPCC (!853)
 
 
 siril 1.4.0-beta1
